# app-factory-cpp

./: .gitignore  Makefile.am  README.md  build.sh  configure.ac
lib/app/: EnglishApp.cpp  EnglishApp.h  FranceApp.cpp  FranceApp.h  IApplication.h  Makefile.am
lib/ctest/: Makefile.am  ctest.h  ctest1.cpp  ctest2.cpp
src/: AppFactory.cpp  AppFactory.h  Makefile.am  startapp.cpp
