
lib_LTLIBRARIES= libfrance.la libenglish.la

# CLEANFILES = \
# 	libapp.a	\
# 	libapp.la	\
# 	*~

# DISTCLEANFILES = $(CLEANFILES)

libenglish_la_SOURCES = EnglishApp.cpp EnglishApp.h IApplication.h
libenglish_la_LDFLAGS = -version-info 0:0:0

libfrance_la_SOURCES = FranceApp.cpp FranceApp.h IApplication.h
libfrance_la_LDFLAGS = -version-info 0:0:0
